# SpaceAttractor

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ProjectOptions.cmake  vcpkg.json
.github/: constants.env
.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml  wasm.yml
cmake/: Bloaty.cmake  Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Emscripten.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  Lizard.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake  Utilities.cmake  VCEnvironment.cmake
game/: CMakeLists.txt  Dependencies.cmake
game/resources/: content.json
game/resources/lang/: en_en.json
game/resources/models/: body_v2.fbx
game/resources/shaders/: HexagonalTruchet.frag1  Styled.frag  Styled.vert
game/src/: main.cpp
game/src/base/: GameApplication.cpp  GameApplication.h
game/src/base/assets/: Item.h
game/src/base/ecs/components/: FloatingOrigin.h  RenderTransform.h  SpaceTransform.h
game/src/base/ecs/components/space_transform/: FloatingOrigin.h  SpaceTransform.h  WorldSpaceCache.h
game/src/base/ecs/entities/: Missile.h
game/src/base/ecs/systems/: FloatingOriginSystem.cpp  FloatingOriginSystem.h  OrthoPersonSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PlayerControllSystem.cpp  PlayerControllSystem.h
game/src/base/ecs/systems/managment/: GameSystemFactory.cpp  GameSystemFactory.h
game/src/base/ecs/systems/physics/: PhysicsSystem.cpp  PhysicsSystem.h  RigidbodySystem.cpp  RigidbodySystem.h
game/src/base/renderer/: CubeRenderer.cpp  CubeRenderer.h
game/src/base/renderer/world/: Chunk.h  TerrainGenerator.cpp  TerrainGenerator.h  WorldRenderer.cpp  WorldRenderer.h
game/src/base/screens/: GameScreen.cpp  GameScreen.h  MenuScreen.cpp  MenuScreen.h
game/src/base/screens/ui/: MainMenuUi.cpp  MainMenuUi.h  PauseMenuUi.cpp  PauseMenuUi.h
game/src/base/world/: Level.h  TestLevel.cpp  TestLevel.h  World.cpp  World.h
